--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,24 @@
-asgiref==3.5.0
-backports.zoneinfo==0.2.1
+asgiref==3.4.1
+autopep8==1.5.7
+dataclasses==0.6
 dj-database-url==0.5.0
-Django==4.0.3
-django-filter==21.1
-django-froala-editor==4.0.10
+Django==3.2.6
+django-cors-headers==3.7.0
+django-filter==2.4.0
+django-froala-editor==3.2.2
 django-heroku==0.3.1
-djangorestframework==3.13.1
-djongo==1.3.6
+djangorestframework==3.12.4
+djongo==1.2.38
+dnspython==1.16.0
 gunicorn==20.1.0
-importlib-metadata==4.11.3
-Markdown==3.3.6
-Pillow==9.0.1
-psycopg2==2.9.3
-psycopg2-binary==2.9.3
-pymongo==4.0.2
-python-dotenv==0.19.2
-pytz==2021.3
+Pillow==8.3.1
+psycopg2==2.9.1
+psycopg2-binary==2.9.1
+pycodestyle==2.7.0
+pymongo==3.12.0
+python-dotenv==0.19.0
+python-snappy==0.6.0
+pytz==2021.1
 sqlparse==0.2.4
-whitenoise==6.0.0
-zipp==3.7.0
+toml==0.10.2
+whitenoise==5.3.0
